--- a/src/style/Game.css
+++ b/src/style/Game.css
@@ -1,3 +1,10 @@
+#root {
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    width: 100%;
+}
+
 .tile {
     position: absolute;
     background-color: blueviolet;
