--- a/src/style/Game.css
+++ b/src/style/Game.css
@@ -13,7 +13,8 @@ body {
 }
 .scene {
     position: relative;
-    width: 10em;
+    width: 180px;
+    height: 180px;
 }
 .tile {
     position: absolute;
